// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> mount rendering matches the snapshot 1`] = `
<App>
  <div
    className="App"
  >
    <header
      className="App-header"
    >
      <img
        alt="logo"
        className="App-logo"
        src="logo.svg"
      />
      <h1>
        Welcome to React
      </h1>
      <ul
        className="tyler"
      >
        <li>
          Test 1
        </li>
        <li>
          Test 2
        </li>
        <li>
          Test 3
        </li>
      </ul>
      <li>
        Test 3
      </li>
      <p
        className="App-intro"
      >
        Edit 
        <code>
          src/App.js
        </code>
         and save to reload.
      </p>
      <Title
        text="Some title"
      >
        <div>
          Some title
        </div>
      </Title>
      <a
        className="App-link"
        href="https://reactjs.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn React
      </a>
      <p>
        Hello World
      </p>
    </header>
    <Test>
      <div>
        Testing
      </div>
    </Test>
  </div>
</App>
`;

exports[`<App /> shallow rendering matches the snapshot 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <h1>
      Welcome to React
    </h1>
    <ul
      className="tyler"
    >
      <li>
        Test 1
      </li>
      <li>
        Test 2
      </li>
      <li>
        Test 3
      </li>
    </ul>
    <li>
      Test 3
    </li>
    <p
      className="App-intro"
    >
      Edit 
      <code>
        src/App.js
      </code>
       and save to reload.
    </p>
    <Title
      text="Some title"
    />
    <a
      className="App-link"
      href="https://reactjs.org"
      rel="noopener noreferrer"
      target="_blank"
    >
      Learn React
    </a>
    <p>
      Hello World
    </p>
  </header>
  <Test />
</div>
`;
